syntax = "proto3";

package coupon.v1;

option go_package = "github.com/SuperRPM/coupon-issuance-system/gen/coupon/v1;couponv1";

service CouponService {
  rpc IssueCoupon(IssueCouponRequest) returns (IssueCouponResponse) {}
}

message IssueCouponRequest {
  int32 campaign_id = 1;
}

message IssueCouponResponse {
  int32 coupon_id = 1;
  string coupon_code = 2;
}
